[package]
name = "hydroper_source_text"
version = "1.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust-source-text"
keywords = ["source", "text"]
description = "Source text containing line locations."
license = "Apache-2.0"

[dependencies]
